--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<title>Browser Pong</title>
+		<script type = 'text/javascript' src = "jquery.min.js"></script>
 		<script type='text/javascript' src='script.js'></script>
 		<link rel='stylesheet' type='text/css' href='stylesheet.css' />
 	</head>
